# GauFreqScaler

./: CMakeLists.txt
bin_Linux/: GauFreqScaler
src/: GauFreqScaler.c
